--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@vime/core": "^5.3.1",
+    "@vime/react": "^5.3.1",
     "bootstrap": "^5.1.3",
     "lightgallery": "^2.4.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "video-player-for-react": "^1.0.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
